tests/ide_unmerged_deps/slow_dependent.js
// @flow

import {x} from './dependency';

(x: number); // error

$Flow$DebugSleep$DO_NOT_USE_IN_PRODUCTION_CODE_OR_YOU_WILL_BE_FIRED(10);
